[package]
name = "teatime"
version = "0.3.0-r1"
authors = ["John Baublitz <john.baublitz@threatstack.com>"]
description = "Default trait implementations and data types for implementing HTTP API clients"
repository = "https://github.com/threatstack/teatime"
keywords = ["api", "http", "vault", "sensu", "gitlab"]
license = "BSD-3-Clause"
include = [
  "**/*.rs",
  "Cargo.toml",
  "LICENSE",
]

[lib]
name = "teatime"

[dependencies]
futures = "0.1.14"
hyper = "0.11.2"
hyper-tls = "0.1.2"
native-tls = "0.1.4"
tokio-core = "0.1.8"
serde_json = "1.0.2"
rpassword = "1.0.1"
url = "1.6.0"
nom = "^3.2"

[features]
default = []

all = ["gitlab", "sensu", "vault"]
gitlab = []
sensu = []
vault = []
